[package]
name = "calc"
version = "0.1.0"
authors = ["K1630549 <umar.marikar@kcl.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "calc"

[build-dependencies]
cfgrammar = "0.3"
lrlex = "0.3"
lrpar = "0.3"

[dependencies]
cfgrammar = "0.3"
lrlex = "0.3"
lrpar = "0.3"
